package utils;


public class ComUtilsError extends Exception {

    public ComUtilsError(String message) {
        super(message);
    }

}
