@startuml

title __CLIENTE's Class Diagram__\n

  package  {
    package utils {
      class Cards {
      }
    }
  }
  

  package  {
    class Client {
    }
  }
  

  package  {
    package utils {
      enum Cmd {
      }
    }
  }
  

  package  {
    package utils {
      class ComUtils {
      }
    }
  }
  

  package  {
    package utils {
      class ComUtilsError {
      }
    }
  }
  

  package  {
    package utils {
      class ComUtilsService {
      }
    }
  }
  

  package  {
    package utils {
      class Deck {
      }
    }
  }
  

  package  {
    class LogicaPartida {
    }
  }
  

  package  {
    class PartidaClient {
    }
  }
  

  ComUtilsService o-- ComUtils : comUtils
  LogicaPartida o-- ComUtilsService : comUtilsS
  LogicaPartida o-- Deck : d
  PartidaClient o-- LogicaPartida : logic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
